--- a/wp-content/themes/row/style.css
+++ b/wp-content/themes/row/style.css
@@ -1843,7 +1843,13 @@ ul#selectUl li.unselected:hover {
 	padding: 20px 15px;
 }
 .overlay h1, .overlay h2.h1 {
-	 font-family: 'GothamBold';
+	font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+    -webkit-text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+    -moz-text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+	font-family: 'GothamBold';
 	font-size: 30px;
 	text-transform: uppercase;
 	letter-spacing: 0px;
@@ -3942,6 +3948,14 @@ width: 35%;
 
 .gallery .flexslider .slides > li {
 	height: 600px;
+}
+
+.gallery .flexslider .slides li:after {
+	content: ".";
+	position:absolute;
+	bottom:0;
+	left:0;
+	z-index:-1000;
 }
 
 .gallery .flexslider .slides img {
